# i3lock-ng

./: .gitignore  CMakeLists.txt
cmake/: CPackConfig.cmake.in
docs/: i3lock-ng.ini
src/: CMakeLists.txt  config.h.in  cursors.h  dpi.c  dpi.h  i3lock-ng.c  i3lock-ng.h  i3lock.c  i3lock.h  randr.c  randr.h  unlock_indicator.c  unlock_indicator.h  xcb.c  xcb.h
src/audio/: audio.h  mute.h
src/audio/alsa/: mute.c  mute.h
src/auth/: auth.c  auth.h  pam.c  pam.h
src/core/: conf.c  conf.h  log.c  log.h  logging.c  logging.h  opts.c  opts.h
src/widgets/: unlock_indicator.c
